--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>cEDH Clock Enhanced v2 - VictorJuliani</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7551753720999910"
+     crossorigin="anonymous"></script>
     <style>
         :root {
             --p1-color-start: #D32F2F;
